--- a/XBC2ModelDecomp/XBC2ModelDecomp.csproj
+++ b/XBC2ModelDecomp/XBC2ModelDecomp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FormatTools.cs" />
+    <Compile Include="Structs.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
