--- a/XBC2ModelDecomp/packages.config
+++ b/XBC2ModelDecomp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GitInfo" version="2.0.20" targetFramework="net461" developmentDependency="true" />
   <package id="zlib.net" version="1.0.4.0" targetFramework="net461" />
 </packages>
