--- a/XBC2ModelDecomp/packages.config
+++ b/XBC2ModelDecomp/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GitInfo" version="2.0.20" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.3.3" targetFramework="net461" />
+  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.3.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="SharpGLTF.Core" version="1.0.0-alpha0007" targetFramework="net461" />
   <package id="SharpGLTF.Toolkit" version="1.0.0-alpha0007" targetFramework="net461" />
