--- a/XBC2ModelDecomp/XBC2ModelDecomp.csproj
+++ b/XBC2ModelDecomp/XBC2ModelDecomp.csproj
@@ -55,6 +55,14 @@
   <PropertyGroup>
     <StartupObject>XBC2ModelDecomp.App</StartupObject>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>bin\x64\Release\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.3.3, Culture=neutral, PublicKeyToken=8985beaab7ea3f04, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft-WindowsAPICodePack-Core.1.1.3.3\lib\net452\Microsoft.WindowsAPICodePack.dll</HintPath>
@@ -68,10 +76,10 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="SharpGLTF.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpGLTF.Core.1.0.0-alpha0009\lib\netstandard2.0\SharpGLTF.Core.dll</HintPath>
+      <HintPath>..\packages\SharpGLTF.Core.1.0.0-alpha0012\lib\netstandard2.0\SharpGLTF.Core.dll</HintPath>
     </Reference>
     <Reference Include="SharpGLTF.Toolkit, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpGLTF.Toolkit.1.0.0-alpha0009\lib\netstandard2.0\SharpGLTF.Toolkit.dll</HintPath>
+      <HintPath>..\packages\SharpGLTF.Toolkit.1.0.0-alpha0012\lib\netstandard2.0\SharpGLTF.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -104,6 +112,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextureTools.cs" />
     <Page Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
